// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Input matches snapshot - completed state 1`] = `
Array [
  .c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c1 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c3 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: 600;
  color: #6f6f6f;
  margin: 2.5rem 0 1rem 0;
}

.c4 {
  border-left: 16px solid #f1f1f1;
  padding-left: 1.6rem;
  margin: 1rem 0 1rem 1rem;
  max-height: 16.8rem;
  overflow: hidden;
  position: relative;
  line-height: 1.6;
  font-size: calc(1.8rem * var(--content-text-scale));
  color: #5f6163;
  white-space: pre-wrap;
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
    className="c0"
    data-test-id="student-free-response"
  >
    <div
      className="step-card-body"
    >
      <div
        className="c1"
      >
        <div
          className="c2 question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Explain the process of photosynthesis.",
            }
          }
        />
      </div>
      <div
        className="c3"
      >
        Your answer
      </div>
      <div
        className="c4"
      >
        Photosynthesis is the process by which plants convert light energy into chemical energy.
      </div>
    </div>
  </div>,
  .c5 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c5:not([disabled]) {
  cursor: pointer;
}

.c5:not([disabled]):hover {
  background: #E74B0D;
}

.c5:not([disabled]):active {
  background: #C5400B;
}

.c5:disabled {
  opacity: 0.4;
}

.c4 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c4 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c4 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c2 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: bold;
  color: #424242;
}

.c3 {
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
  white-space: pre-wrap;
}

.c3 .feedback-label {
  color: #424242;
  font-weight: bold;
}

.c1 .detailed-solution {
  margin-bottom: 1rem;
}

.c1 .detailed-solution .header {
  display: inline;
  margin-right: 0.5rem;
  color: #5e6062;
  font-weight: bold;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
}

.c1 .detailed-solution .solution {
  display: inline;
  color: #6f6f6f;
}

.c0 {
  padding: 4.8rem 14rem 0;
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale));
  line-height: calc(2rem * var(--content-text-scale));
  background: #fdfdfd;
  overflow: auto;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 button {
  width: 160px;
  height: 48px;
}

.c0 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c0 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c0 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c0 .controls button:has(~ button),
.c0 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

@media (max-width:999px) {
  .c0 {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: calc(8px * 2) 8px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c0 {
    padding: 0 140px 32px 140px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c0 .points {
    max-width: 400px;
  }
}

<div
    className="c0 step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
      >
        <div
          className="c1"
          role="status"
        >
          <div
            className="c2"
          >
            Score: 
            8/10
          </div>
          <div
            className="c3"
          >
            <span
              className="feedback-label"
            >
              Feedback:
            </span>
             
            <span
              className="c4"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Good explanation!</p>",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="controls"
      >
        <button
          className="c5"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Free Response Input matches snapshot - initial state 1`] = `
Array [
  .c3 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c3 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c3 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c2 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c5 {
  margin: 8px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  line-height: 1.6rem;
  color: #6f6f6f;
}

.c5 .word-limit-error-info,
.c5 .words-remaining-negative {
  color: #c2002f;
}

.c5 div > span {
  font-size: calc(1.4rem * var(--content-text-scale));
  line-height: 16px;
}

.c5 div > span + span {
  margin-left: 1rem;
}

.c5 .last-submitted + * {
  margin-top: 0.8rem;
}

.c4 {
  display: block;
  font-family: inherit;
  font-size: calc(1.8rem * var(--content-text-scale));
  width: 100%;
  min-height: 10.5em;
  line-height: 1.5em;
  margin: 2.5rem 0 0 0;
  padding: 0.5em;
  border: 1px solid #818181;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  background-color: #FFF5E0;
  padding-left: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
    className="c0"
    data-test-id="student-free-response"
  >
    <div
      className="step-card-body"
    >
      <div
        className="c1"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="16"
            id="mask0_4564_440"
            maskUnits="userSpaceOnUse"
            style={
              Object {
                "maskType": "luminance",
              }
            }
            width="16"
            x="0"
            y="0"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
              fill="white"
              fillRule="evenodd"
            />
          </mask>
          <g
            mask="url(#mask0_4564_440)"
          >
            <rect
              fill="#976502"
              height="16"
              width="16"
            />
          </g>
        </svg>
        You can come back and edit your response until it has been graded.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3 question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Explain the process of photosynthesis.",
            }
          }
        />
      </div>
      <textarea
        aria-label="question response text box"
        className="c4"
        data-test-id="free-response-box"
        disabled={false}
        onChange={[Function]}
        placeholder="Enter your response..."
        value=""
      />
      <div
        className="c5"
      >
        <div>
          <span>
             Remaining words: 
            <span>
              50
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:not([disabled]) {
  cursor: pointer;
}

.c1:not([disabled]):hover {
  background: #E74B0D;
}

.c1:not([disabled]):active {
  background: #C5400B;
}

.c1:disabled {
  opacity: 0.4;
}

.c0 {
  padding: 4.8rem 14rem 0;
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale));
  line-height: calc(2rem * var(--content-text-scale));
  background: #fdfdfd;
  overflow: auto;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 button {
  width: 160px;
  height: 48px;
}

.c0 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c0 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c0 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c0 .controls button:has(~ button),
.c0 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

@media (max-width:999px) {
  .c0 {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: calc(8px * 2) 8px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c0 {
    padding: 0 140px 32px 140px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c0 .points {
    max-width: 400px;
  }
}

<div
    className="c0 step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="controls"
      >
        <button
          className="c1"
          data-test-id="submit-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Free Response Input matches snapshot - preview mode unanswered 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c1 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c3 {
  font-size: calc(1.8rem * var(--content-text-scale));
  color: #6f6f6f;
  margin: 0;
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
  className="c0"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="c1"
    >
      <div
        className="c2 question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <p
      className="c3"
    >
      Unanswered
    </p>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - preview mode with answer 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c1 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c3 {
  border-left: 16px solid #f1f1f1;
  padding-left: 1.6rem;
  margin: 1rem 0 1rem 1rem;
  max-height: 16.8rem;
  overflow: hidden;
  position: relative;
  line-height: 1.6;
  font-size: calc(1.8rem * var(--content-text-scale));
  color: #5f6163;
  white-space: pre-wrap;
}

.c5 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: bold;
  color: #424242;
}

.c6 {
  font-size: calc(1.4rem * var(--content-text-scale));
  color: #424242;
  white-space: pre-wrap;
}

.c6 .feedback-label {
  color: #424242;
  font-weight: bold;
}

.c4 .detailed-solution {
  margin-bottom: 1rem;
}

.c4 .detailed-solution .header {
  display: inline;
  margin-right: 0.5rem;
  color: #5e6062;
  font-weight: bold;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
}

.c4 .detailed-solution .solution {
  display: inline;
  color: #6f6f6f;
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
  className="c0"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="c1"
    >
      <div
        className="c2 question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <div
      className="c3"
    >
      Photosynthesis converts sunlight into chemical energy.
    </div>
    <div
      className="c4"
      role="status"
    >
      <div
        className="c5"
      >
        Score: 
        9/10
      </div>
      <div
        className="c6"
      >
        <span
          className="feedback-label"
        >
          Feedback:
        </span>
         
        <span
          className="c2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Excellent work!</p>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - preview mode with grading 1`] = `
.c13 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c13:not([disabled]) {
  cursor: pointer;
}

.c13:not([disabled]):hover {
  background: #E74B0D;
}

.c13:not([disabled]):active {
  background: #C5400B;
}

.c13:disabled {
  opacity: 0.4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;
  border-left: 1px solid #f1f1f1;
  min-width: 300px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.8rem;
}

.c9 {
  font-size: calc(1.4rem * var(--content-text-scale));
  font-weight: 600;
  color: #424242;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.8rem;
  font-size: calc(1.6rem * var(--content-text-scale));
}

.c10 {
  width: 6rem;
  padding: 0.8rem;
  font-size: calc(1.6rem * var(--content-text-scale));
  border: 1px solid #818181;
  border-radius: 4px;
  text-align: center;
}

.c10::-webkit-input-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c10::-moz-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c10:-ms-input-placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c10::placeholder {
  color: #6F6F6F;
  text-align: center;
  line-height: normal;
}

.c10:focus {
  outline: none;
  border-color: #007da4;
}

.c10:disabled {
  background-color: #f1f1f1;
  cursor: not-allowed;
}

.c11 {
  width: 100%;
  min-height: 12rem;
  padding: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
  font-family: inherit;
  border: 1px solid #818181;
  border-radius: 4px;
  resize: vertical;
}

.c11:focus {
  outline: none;
  border-color: #007da4;
}

.c11:disabled {
  background-color: #f1f1f1;
  cursor: not-allowed;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c1 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c5 {
  border-left: 16px solid #f1f1f1;
  padding-left: 1.6rem;
  margin: 1rem 0 1rem 1rem;
  max-height: 16.8rem;
  overflow: hidden;
  position: relative;
  line-height: 1.6;
  font-size: calc(1.8rem * var(--content-text-scale));
  color: #5f6163;
  white-space: pre-wrap;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 2.5rem;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
  className="c0"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="c1"
    >
      <div
        className="c2 question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Explain the process of photosynthesis.",
          }
        }
      />
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          Photosynthesis converts sunlight into chemical energy.
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <label
              className="c9"
              htmlFor="frg-0-score"
            >
              Points
            </label>
            <input
              aria-label="Score"
              className="c10"
              disabled={false}
              id="frg-0-score"
              max={10}
              min={0}
              onChange={[Function]}
              placeholder="--"
              step={1}
              type="number"
              value="9"
            />
            <span>
              out of 
              10
            </span>
          </div>
        </div>
        <div
          className="c7"
        >
          <label
            className="c9"
            htmlFor="frg-0-comment"
          >
            Comment
          </label>
          <textarea
            aria-label="Comment"
            className="c11"
            disabled={false}
            id="frg-0-comment"
            onChange={[Function]}
            placeholder="Enter feedback for the student..."
            value="Good work overall."
          />
        </div>
        <div
          className="c12"
        >
          <button
            className="c13"
            disabled={true}
            onClick={[Function]}
          >
            Update
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Free Response Input matches snapshot - saving state 1`] = `
Array [
  .c3 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c3 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c3 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c2 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c5 {
  margin: 8px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  line-height: 1.6rem;
  color: #6f6f6f;
}

.c5 .word-limit-error-info,
.c5 .words-remaining-negative {
  color: #c2002f;
}

.c5 div > span {
  font-size: calc(1.4rem * var(--content-text-scale));
  line-height: 16px;
}

.c5 div > span + span {
  margin-left: 1rem;
}

.c5 .last-submitted + * {
  margin-top: 0.8rem;
}

.c4 {
  display: block;
  font-family: inherit;
  font-size: calc(1.8rem * var(--content-text-scale));
  width: 100%;
  min-height: 10.5em;
  line-height: 1.5em;
  margin: 2.5rem 0 0 0;
  padding: 0.5em;
  border: 1px solid #818181;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  background-color: #FFF5E0;
  padding-left: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
    className="c0"
    data-test-id="student-free-response"
  >
    <div
      className="step-card-body"
    >
      <div
        className="c1"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="16"
            id="mask0_4564_440"
            maskUnits="userSpaceOnUse"
            style={
              Object {
                "maskType": "luminance",
              }
            }
            width="16"
            x="0"
            y="0"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
              fill="white"
              fillRule="evenodd"
            />
          </mask>
          <g
            mask="url(#mask0_4564_440)"
          >
            <rect
              fill="#976502"
              height="16"
              width="16"
            />
          </g>
        </svg>
        You can come back and edit your response until it has been graded.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3 question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Explain the process of photosynthesis.",
            }
          }
        />
      </div>
      <textarea
        aria-label="question response text box"
        className="c4"
        data-test-id="free-response-box"
        disabled={true}
        onChange={[Function]}
        placeholder="Enter your response..."
        value="This is being saved"
      />
      <div
        className="c5"
      >
        <div>
          <span>
             Remaining words: 
            <span>
              46
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:not([disabled]) {
  cursor: pointer;
}

.c1:not([disabled]):hover {
  background: #E74B0D;
}

.c1:not([disabled]):active {
  background: #C5400B;
}

.c1:disabled {
  opacity: 0.4;
}

.c0 {
  padding: 4.8rem 14rem 0;
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale));
  line-height: calc(2rem * var(--content-text-scale));
  background: #fdfdfd;
  overflow: auto;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 button {
  width: 160px;
  height: 48px;
}

.c0 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c0 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c0 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c0 .controls button:has(~ button),
.c0 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

@media (max-width:999px) {
  .c0 {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: calc(8px * 2) 8px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c0 {
    padding: 0 140px 32px 140px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c0 .points {
    max-width: 400px;
  }
}

<div
    className="c0 step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="controls"
      >
        <button
          className="c1"
          data-test-id="submit-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Saving…
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Free Response Input matches snapshot - update mode 1`] = `
Array [
  .c3 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c3 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c3 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c2 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c5 {
  margin: 8px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 1.6rem;
  color: #6f6f6f;
}

.c5 .word-limit-error-info,
.c5 .words-remaining-negative {
  color: #c2002f;
}

.c5 div > span {
  font-size: calc(1.4rem * var(--content-text-scale));
  line-height: 16px;
}

.c5 div > span + span {
  margin-left: 1rem;
}

.c5 .last-submitted + * {
  margin-top: 0.8rem;
}

.c4 {
  display: block;
  font-family: inherit;
  font-size: calc(1.8rem * var(--content-text-scale));
  width: 100%;
  min-height: 10.5em;
  line-height: 1.5em;
  margin: 2.5rem 0 0 0;
  padding: 0.5em;
  border: 1px solid #818181;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  background-color: #FFF5E0;
  padding-left: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
    className="c0"
    data-test-id="student-free-response"
  >
    <div
      className="step-card-body"
    >
      <div
        className="c1"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="16"
            id="mask0_4564_440"
            maskUnits="userSpaceOnUse"
            style={
              Object {
                "maskType": "luminance",
              }
            }
            width="16"
            x="0"
            y="0"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
              fill="white"
              fillRule="evenodd"
            />
          </mask>
          <g
            mask="url(#mask0_4564_440)"
          >
            <rect
              fill="#976502"
              height="16"
              width="16"
            />
          </g>
        </svg>
        You can come back and edit your response until it has been graded.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3 question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Explain the process of photosynthesis.",
            }
          }
        />
      </div>
      <textarea
        aria-label="question response text box"
        className="c4"
        data-test-id="free-response-box"
        disabled={false}
        onChange={[Function]}
        placeholder="Enter your response..."
        value="Previously submitted answer"
      />
      <div
        className="c5"
      >
        <div>
          <span
            className="last-submitted"
          >
            Last submitted on 
            Jul 26, 2024, 9:00 AM
          </span>
        </div>
        <div>
          <span>
             Remaining words: 
            <span>
              47
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:not([disabled]) {
  cursor: pointer;
}

.c1:not([disabled]):hover {
  background: #E74B0D;
}

.c1:not([disabled]):active {
  background: #C5400B;
}

.c1:disabled {
  opacity: 0.4;
}

.c0 {
  padding: 4.8rem 14rem 0;
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale));
  line-height: calc(2rem * var(--content-text-scale));
  background: #fdfdfd;
  overflow: auto;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 button {
  width: 160px;
  height: 48px;
}

.c0 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c0 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c0 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c0 .controls button:has(~ button),
.c0 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

.c2 {
  background-color: #757575;
}

.c2:hover:not(:disabled) {
  background-color: #818181;
}

.c2:active:not(:disabled) {
  background-color: #5f6163;
}

@media (max-width:999px) {
  .c0 {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: calc(8px * 2) 8px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c0 {
    padding: 0 140px 32px 140px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c0 .points {
    max-width: 400px;
  }
}

<div
    className="c0 step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="controls"
      >
        <button
          className="c1 c2"
          disabled={true}
          onClick={[Function]}
        >
          Cancel
        </button>
        <button
          className="c1"
          data-test-id="update-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Update
        </button>
        <button
          className="c1"
          data-test-id="continue-btn"
          disabled={false}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Free Response Input matches snapshot - with free response text 1`] = `
Array [
  .c3 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c3 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c3 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c2 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c5 {
  margin: 8px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  line-height: 1.6rem;
  color: #6f6f6f;
}

.c5 .word-limit-error-info,
.c5 .words-remaining-negative {
  color: #c2002f;
}

.c5 div > span {
  font-size: calc(1.4rem * var(--content-text-scale));
  line-height: 16px;
}

.c5 div > span + span {
  margin-left: 1rem;
}

.c5 .last-submitted + * {
  margin-top: 0.8rem;
}

.c4 {
  display: block;
  font-family: inherit;
  font-size: calc(1.8rem * var(--content-text-scale));
  width: 100%;
  min-height: 10.5em;
  line-height: 1.5em;
  margin: 2.5rem 0 0 0;
  padding: 0.5em;
  border: 1px solid #818181;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  background-color: #FFF5E0;
  padding-left: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
    className="c0"
    data-test-id="student-free-response"
  >
    <div
      className="step-card-body"
    >
      <div
        className="c1"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="16"
            id="mask0_4564_440"
            maskUnits="userSpaceOnUse"
            style={
              Object {
                "maskType": "luminance",
              }
            }
            width="16"
            x="0"
            y="0"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
              fill="white"
              fillRule="evenodd"
            />
          </mask>
          <g
            mask="url(#mask0_4564_440)"
          >
            <rect
              fill="#976502"
              height="16"
              width="16"
            />
          </g>
        </svg>
        You can come back and edit your response until it has been graded.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3 question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Explain the process of photosynthesis.",
            }
          }
        />
      </div>
      <textarea
        aria-label="question response text box"
        className="c4"
        data-test-id="free-response-box"
        disabled={false}
        onChange={[Function]}
        placeholder="Enter your response..."
        value="Photosynthesis converts light energy into chemical energy."
      />
      <div
        className="c5"
      >
        <div>
          <span>
             Remaining words: 
            <span>
              43
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:not([disabled]) {
  cursor: pointer;
}

.c1:not([disabled]):hover {
  background: #E74B0D;
}

.c1:not([disabled]):active {
  background: #C5400B;
}

.c1:disabled {
  opacity: 0.4;
}

.c0 {
  padding: 4.8rem 14rem 0;
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale));
  line-height: calc(2rem * var(--content-text-scale));
  background: #fdfdfd;
  overflow: auto;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 button {
  width: 160px;
  height: 48px;
}

.c0 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c0 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c0 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c0 .controls button:has(~ button),
.c0 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

@media (max-width:999px) {
  .c0 {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: calc(8px * 2) 8px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c0 {
    padding: 0 140px 32px 140px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c0 .points {
    max-width: 400px;
  }
}

<div
    className="c0 step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="controls"
      >
        <button
          className="c1"
          data-test-id="submit-answer-btn"
          disabled={false}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Free Response Input matches snapshot - with submission info 1`] = `
Array [
  .c3 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c3 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c3 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 1px solid #d5d5d5;
}

.c0 .step-card-body {
  padding: 4.8rem 14rem 0;
  padding-bottom: 1rem;
}

.c2 {
  font-size: calc(2rem * var(--content-text-scale));
  line-height: 1.68em;
  position: relative;
}

.c5 {
  margin: 8px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  line-height: 1.6rem;
  color: #6f6f6f;
}

.c5 .word-limit-error-info,
.c5 .words-remaining-negative {
  color: #c2002f;
}

.c5 div > span {
  font-size: calc(1.4rem * var(--content-text-scale));
  line-height: 16px;
}

.c5 div > span + span {
  margin-left: 1rem;
}

.c5 .last-submitted + * {
  margin-top: 0.8rem;
}

.c4 {
  display: block;
  font-family: inherit;
  font-size: calc(1.8rem * var(--content-text-scale));
  width: 100%;
  min-height: 10.5em;
  line-height: 1.5em;
  margin: 2.5rem 0 0 0;
  padding: 0.5em;
  border: 1px solid #818181;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  background-color: #FFF5E0;
  padding-left: 1rem;
  font-size: calc(1.4rem * var(--content-text-scale));
}

@media (max-width:999px) {
  .c0 .step-card-body {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-body {
    padding: calc(8px * 2) 8px;
  }
}

<div
    className="c0"
    data-test-id="student-free-response"
  >
    <div
      className="step-card-body"
    >
      <div
        className="c1"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="16"
            id="mask0_4564_440"
            maskUnits="userSpaceOnUse"
            style={
              Object {
                "maskType": "luminance",
              }
            }
            width="16"
            x="0"
            y="0"
          >
            <path
              clipRule="evenodd"
              d="M8 0C3.58203 0 0 3.58332 0 8C0 12.4193 3.58203 16 8 16C12.418 16 16 12.4193 16 8C16 3.58332 12.418 0 8 0ZM8 3.54835C8.74825 3.54835 9.35482 4.15493 9.35482 4.90318C9.35482 5.65143 8.74825 6.25801 8 6.25801C7.25175 6.25801 6.64518 5.65143 6.64518 4.90318C6.64518 4.15493 7.25175 3.54835 8 3.54835ZM9.80648 11.7419C9.80648 11.9557 9.63315 12.129 9.41937 12.129H6.58062C6.36685 12.129 6.19352 11.9557 6.19352 11.7419V10.9677C6.19352 10.754 6.36685 10.5806 6.58062 10.5806H6.96773V8.51611H6.58062C6.36685 8.51611 6.19352 8.34279 6.19352 8.12901V7.35482C6.19352 7.14104 6.36685 6.96772 6.58062 6.96772H8.64517C8.85895 6.96772 9.03227 7.14104 9.03227 7.35482V10.5806H9.41937C9.63315 10.5806 9.80648 10.754 9.80648 10.9677V11.7419Z"
              fill="white"
              fillRule="evenodd"
            />
          </mask>
          <g
            mask="url(#mask0_4564_440)"
          >
            <rect
              fill="#976502"
              height="16"
              width="16"
            />
          </g>
        </svg>
        You can come back and edit your response until it has been graded.
      </div>
      <div
        className="c2"
      >
        <div
          className="c3 question-stem"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Explain the process of photosynthesis.",
            }
          }
        />
      </div>
      <textarea
        aria-label="question response text box"
        className="c4"
        data-test-id="free-response-box"
        disabled={false}
        onChange={[Function]}
        placeholder="Enter your response..."
        value=""
      />
      <div
        className="c5"
      >
        <div>
          <span
            className="last-submitted"
          >
            Last submitted on 
            Jul 26, 2024, 9:00 AM
          </span>
        </div>
        <div>
          <span>
             Remaining words: 
            <span>
              50
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  background-color: #D4450C;
  color: #ffffff;
  font-size: 1.6rem;
  font-weight: 700;
  line-height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  padding: 0 3rem;
  border: 0;
  border-radius: 5px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:not([disabled]) {
  cursor: pointer;
}

.c1:not([disabled]):hover {
  background: #E74B0D;
}

.c1:not([disabled]):active {
  background: #C5400B;
}

.c1:disabled {
  opacity: 0.4;
}

.c0 {
  padding: 4.8rem 14rem 0;
  border-top: 1px solid #d5d5d5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: calc(1.6rem * var(--content-text-scale));
  line-height: calc(2rem * var(--content-text-scale));
  background: #fdfdfd;
  overflow: auto;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 button {
  width: 160px;
  height: 48px;
}

.c0 .step-card-footer-inner {
  padding-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 1.6rem;
}

.c0 .points .attempts-left {
  color: #B03808;
  font-weight: bold;
}

.c0 .controls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 0.8rem;
  margin-left: auto;
}

.c0 .controls button:has(~ button),
.c0 .controls button + button {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  min-width: 0;
  width: 100px;
}

@media (max-width:999px) {
  .c0 {
    padding: 24px 24px;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: calc(8px * 2) 8px;
  }
}

@media (max-width:600px) {
  .c0 .step-card-footer-inner {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:1000px) {
  .c0 {
    padding: 0 140px 32px 140px;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }

  .c0 .points {
    max-width: 400px;
  }
}

<div
    className="c0 step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="controls"
      >
        <button
          className="c1"
          data-test-id="submit-answer-btn"
          disabled={true}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>,
]
`;
